# graphy

./: .gitignore  Cargo.toml  shell.nix
.cargo/: config.toml
benches/: benchmark.rs  fiedler.rs  laplacian.rs  matrix_add.rs
src/: lib.rs
src/algorithms/: cheeger.rs  fiedler.rs  floyd_warshall.rs  hoffman_delsarte.rs  mod.rs
src/graph/: builder.rs  edge.rs  mod.rs  vertex.rs
src/utils/: laplacian.rs  mod.rs  transition.rs
